[package]
name = "trading_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Python integration
pyo3 = { version = "0.21", features = ["auto-initialize"] }

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.14"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Math and statistics
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
